tests/miniJava/pos/000773_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) while ( 0 ) { } else if ( 0 ) { } else { } } }
