tests/miniJava/neg/005153_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] new ) { return 0 ; } }
